@@ -1,8 +1,9 @@
 20/8/11 started 7.27.0
 - version bump for new dev cycle
-- im_subtract(), im_avg() redone as classes
+- im_subtract(), im_avg(), im_min(), im_minpos() redone as classes
 - added VIPS_ARGUMENT_APPEND to help control arg ordering
 - generate has a 'stop' param to signal successful early termination
+- added optional output args, eg. x/y for min
 
 10/8/11 started 7.26.3
 - don't use G_VALUE_COLLECT_INIT(), many platforms do not have a glib this
